2017-10-01  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/popup/popup.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/pages/show_all_results.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/pages/options.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/background/try_xpath_background.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/scripts/try_xpath_functions.js:
	Add the MPL 2.0 Licence header.

2017-09-29  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.css:
	Set style to #open-options.

	* tryXpath/popup/popup.html:
	Add "Open options" button.

	* tryXpath/popup/popup.js:
	Modify the file. "keypress" event is used instead of "keydown"
	event.
	Modify this file. The main expression will be executed when Enter
	key is pressed.

	* tryXpath/background/try_xpath_background.js: 
	Modify genericListener.listeners.requestRestorePopupState to send
	message	even if popupState is null.
	
	* tryXpath/popup/popup.js:
	Modify genericListener.listeners.restorePopupState to handle the
	case that message.state is null.


	* tryXpath/popup/popup.html (Main):
	Remove none class.

	* tryXpath/popup/popup.js:
	Modify this file. Some elements are linked to some checkboxes.

2017-09-28  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.html
	Add ids.

	* tryXpath/popup/popup.css (.none):
	Add a hidden element style.

	* tryXpath/popup/popup.js:
	Modify the code.
	
	* tryXpath/background/try_xpath_background.js:
	Set cssOrigin in genericListener.listeners.insertCss.

	* tryXpath/pages/options.js:
	Remove elements variable.
	Modify this file to use => operator.

	* tryXpath/background/try_xpath_background.js:
	Remove genericListener.listeners.changeOptions function.
	Add a listener to chrome.storage.onChanged to change classes and
	css values.

	* tryXpath/pages/options.js:
	Change save button behavior. This button save the options to
	storage.sync.
